# ComBot

./: .gitignore  README.md  pyproject.toml  requirements.txt
controllers/combot_controller/: Qlearning.py  arm.py  arm_controller.py  combot.py  combot_controller.py  combot_urdf.urdf  fencing_actions.py  fencing_constants.py  ikpy_integration.py  initialisation.py  localisation.py  localisation_movement_testing.py  movement.py  player_controller.py  strategy.py  test_1_log.csv  test_2_log.csv  test_3_log.csv  test_3_with_box_log.csv  tiago_new_urdf.urdf  tiago_urdf.urdf
controllers/combot_controller/DQN_states/: first_model.pt  model2.pt  model3a.pt  model3b.pt  model3c.pt  model3d.pt  model3e.pt  model3f.pt  model3g.pt  modelx.pt
controllers/combot_controller/DQN_training_results/: eval0.csv  eval1.csv  eval10.csv  eval11.csv  eval12.csv  eval2.csv  eval3.csv  eval4.csv  eval5.csv  eval6.csv  eval7.csv  eval8.csv  (+10 more)
controllers/player_controller/: arm.py  combot.py  fencing_actions.py  fencing_constants.py  ikpy_integration.py  player_controller.py  player_urdf.urdf  shared_dataclasses.py  strategy.py
controllers/tiagopp/: combot.py  combot_controller.py  initialisation.py  localisation.py  strategy.py  tiagopp.py
controllers/training_combot_controller/: strategy.py  trainer_fencing_actions.py  training_combot.py  training_combot_controller.py
player_controller/: combot.py  fencing_constants.py
protos/: FencingSword.proto  FencingSwordAsSlot.proto  Tiago++.proto  Tiago++SwordArm.proto
worlds/: .combot.wbproj  .training.wbproj  combot.wbt  training.wbt
(+23 files in other folders)
