[project]
name = "combot"
version = "0.1.0"
description = "Combat Robot"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "ikpy",
    "matplotlib>=3.10.7",
    "numpy>=2.3.5",
    "urdf-parser-py>=0.0.4",
    "torch",
]

[dependency-groups]
dev = [
    "ruff>=0.14.3",
]

[tool.uv.sources]
ikpy = { git = "https://github.com/alters-mit/ikpy.git" }

[tool.fawltydeps]
ignore_undeclared = ["controller"]
